# back-fabrica-needs

./: README.md  pyproject.toml  requirements.txt  server.py
config/: settings.py  urls.py  wsgi.py
fabrica_needs/: admin.py  apps.py
fabrica_needs/migrations/: 0001_initial.py  0002_rename_produtcs_produtc.py  0003_rename_produtc_product.py  0004_product_appearence.py  0005_product_min.py
fabrica_needs/models/: __init__.py  entry.py  outflow.py  product.py  wallet.py
fabrica_needs/serializers/: __init__.py  entry.py  outflow.py  product.py  user.py  wallet.py
fabrica_needs/views/: __init__.py  entry.py  outflow.py  product.py  user.py  wallet.py
uploader/: views.py
uploader/migrations/: 0001_initial.py
uploader/serializers/: image.py
utils/: files.py
