[project]
name = "back-fabrica-needs"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "João Comprometido", email = "joaovssouza59@gmail.com"},
    {name = "luansilva25", email = "luansilva250807@gmail.com"},
]
dependencies = [
    "django>=5.0.4",
    "djangorestframework>=3.15.1",
    "python-magic>=0.4.27",
    "Pillow>=10.3.0",
    "django-cors-headers>=4.3.1",
    "djangorestframework-simplejwt>=5.3.1",
    "python-dotenv>=1.0.1",
    "netifaces>=0.11.0",
    "dj-database-url>=2.1.0",
    "setuptools>=69.5.1",
    "waitress>=3.0.0",
    "gunicorn>=22.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
