[project]
name = "back-fabrica-needs"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "João Comprometido", email = "joaovssouza59@gmail.com"},
    {name = "luansilva25", email = "luansilva250807@gmail.com"},
]
dependencies = [
    "django>=5.0.4",
    "djangorestframework>=3.15.1",
    "python-magic>=0.4.27",
    "Pillow>=10.3.0",
    "django-cors-headers>=4.3.1",
    "djangorestframework-simplejwt>=5.3.1",
    "python-dotenv>=1.0.1",
    "netifaces>=0.11.0",
    "dj-database-url>=2.2.0",
    "setuptools>=69.5.1",
    "waitress>=3.0.0",
    "anyio==4.3.0",
    "asgiref==3.7.2",
    "attrs==23.2.0",
    "blinker==1.7.0",
    "CacheControl==0.14.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "dep-logic==0.2.0",
    "distlib==0.3.8",
    "Django==5.0.1",
    "django-cors-headers==4.3.1",
    "django-debug-toolbar==4.2.0",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.3.1",
    "drf-spectacular==0.27.1",
    "filelock==3.13.1",
    "findpython==0.4.1",
    "h11==0.14.0",
    "httpcore==1.0.4",
    "httpx==0.27.0",
    "idna==3.6",
    "inflection==0.5.1",
    "installer==0.7.0",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "msgpack==1.0.8",
    "numpy==1.26.3",
    "packaging==24.0",
    "pdm==2.12.4",
    "pillow==10.2.0",
    "platformdirs==4.2.0",
    "pyarrow==15.0.0",
    "Pygments==2.17.2",
    "PyJWT==2.8.0",
    "pylance==0.9.11",
    "pyproject-hooks==1.0.0",
    "python-dotenv==1.0.1",
    "pytz==2023.4",
    "PyYAML==6.0.1",
    "python-magic==0.4.27",
    "referencing==0.34.0",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "resolvelib==1.0.1",
    "rich==13.7.1",
    "rpds-py==0.18.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlparse==0.4.4",
    "tomlkit==0.12.4",
    "truststore==0.8.0",
    "tzdata==2023.4",
    "unearth==0.15.0",
    "uritemplate==4.1.1",
    "urllib3==2.2.1",
    "virtualenv==20.25.1",
    "waitress==3.0.0",
    "psycopg2==2.9.9",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
